--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: home
-  link: /blog.html
+  link: blog.html
 - name: about
-  link: /about.html
+  link: about.html
 - name: staff
-  link: /staff.html
+  link: staff.html
